# cmake-ctl

./: .gitignore  CMakeLists.txt  INSTALLATION.md  README.md  build.bat  build.sh  pyrightconfig.json  setup.ps1  setup.sh
.github/workflows/: release-windows.yml
cmake-ctl/: pyproject.toml
cmake-ctl/src/cmake-ctl/: __init__.py  __main__.py  cli.py  database.py  events.py  installer.py  native_proxy.py  paths.py  project_tracker.py  proxy.py  session_store.py  source_discovery.py  tui.py  vscode_setup.py
cmake-ctl/tests/: test_cleanup_and_integrity.py  test_events_and_db.py  test_helpers.py  test_resolution_and_identity.py  test_source_discovery_and_proxy.py
cmakectl/: pyproject.toml
cmakectl/src/cmake_ctl/: __main__.py  cli.py  events.py  identity.py  installer.py  paths.py  proxy.py  resolver.py  session_store.py  tui.py
cmakectl/src/cmakectl/: __init__.py  __main__.py  cleaner.py  cli.py  config_store.py  database.py  identity.py  paths.py  project_tracker.py  proxy.py  resolver.py  session_store.py  source_discovery.py  tui.py
cmakectl/tests/: test_cleanup_and_integrity.py  test_events_and_db.py  test_helpers.py  test_resolution_and_identity.py  test_source_discovery_and_proxy.py
docs/: IDEA.md  V1-CHECKLIST.md
proxy/: CMakeLists.txt
proxy/src/proxy/: proxy.cpp
scripts/: create_release_folder.py  create_release_zip.py
src/proxy/: proxy.cpp
