[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cmake-ctl"
version = "0.1.0"
description = "CMake version manager and project tracker"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "cmake-ctl" }]
dependencies = []

[project.scripts]
cmake-ctl = "cmake-ctl.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
