[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cmakectl"
version = "0.1.0"
description = "CMake version manager and project tracker"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "cmakectl" }]
dependencies = []

[project.scripts]
cmakectl = "cmakectl.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
